Maven Surefire and Failsafe plugins: docs, code